[project]
name = "rushd"
version = "0.3.0"
description = "Manage multiple Claude Code instances via tmux"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.5.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.scripts]
rushd = "rushd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rushd"]
